--- a/restaurant_landing/src/container/Header/Header.css
+++ b/restaurant_landing/src/container/Header/Header.css
@@ -11,6 +11,29 @@
    font-size: 90px;
 }
 
+.header p {
+   font-family: var(--font-base);
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 175%;
+   letter-spacing: 0.04em;
+   color: var(--color-white);
+}
+
+.header > div > p {
+   color: var(--color-gray);
+}
+
 .header__img img {
    width: 80%;
+}
+
+.header button {
+   font-family: "Cormorant Upright";
+   font-weight: 700;
+   font-size: 16px;
+   line-height: 175%;
+   letter-spacing: 0.04em;
+   color: #0c0b08;
+   background-color: var(--color-golden);
 }
